@@ -2,6 +2,7 @@
 Version Next
 
     - Fix use of MAX_HOST_NAME in http_io.c (issue #42)
+    - Fix encryption key generation bug on some systems
 
 Version 1.3.5 (r485) released 29 May 2013
 
